Change of some tags and country localization

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -20,8 +20,8 @@
  ATH_ADJ:0 "Athenian"
  AUS:0 "Austria"
  AUS_ADJ:0 "Austrian"
- AYU:0 "Ayyubids"
- AYU_ADJ:0 "Ayyubid"
+ HSN:0 "Ayyubids"
+ HSN_ADJ:0 "Ayyubid"
  AZT:0 "Aztecs"
  AZT_ADJ:0 "Aztecan"
  BAB:0 "Babylon"
@@ -56,7 +56,7 @@
  GER_ADJ:0 "German"
  HJO:0 "Hojo"
  HJO_ADJ:0 "Hojo"
- HJP:0 "Hojo Japan"
+ HJP:0 "Hojo Shogunate"
  HJP_ADJ:0 "Japanese"
  HND:0 "India"
  HND_ADJ:0 "Indian"
@@ -70,7 +70,7 @@
  INC_ADJ:0 "Incan"
  IRO:0 "Iroquois"
  IRO_ADJ:0 "Iroquoisian"
- JAP:0 "Oda Japan"
+ JAP:0 "Oda Shogunate"
  JAP_ADJ:0 "Japanese"
  KHM:0 "Khmer"
  KHM_ADJ:0 "Khmer"
@@ -156,4 +156,13 @@
  ZUL_ADJ:0 "Zulu"
  GAU:0 "Gaul"
  GAU_ADJ:0 "Gallic"
+ PLC:0 "Poland-Lithania"
+ PLC_ADJ:0 "Rzeczpospolitan"
+ VTM:0 "Vietnam"
+ VTM_ADJ:0 "Vietnamese"
+ YUA:0 "Yuan"
+ YUA_ADJ:0 "Yuan"
  
+ #City-States
+ AYU:0 "Ayutthaia"
+ AYU_ADJ:0 "Ayutthaian"
